# FETM-NanoWall

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements-da3-macos.txt
configs/: sem_domain.example.json
data/: README.md
data/configs/: sample_001.json
docs/: workflow.md
nano_sem_domain/: __init__.py  calibration.py  cli.py  config.py  da3_bridge.py  depth_processing.py  image_io.py  pipeline.py
nano_transport/: __init__.py  directions.py  run_mesh_particle_hits.py  run_particle_hits.py  run_transport.py  voxelize.py
scripts/: activate_env.sh  add_time_weighted_accessibility.py  analyze_particle_trapping.py  build_readme_figures.py  check_env.py  export_domain_3d.py  export_paraview.py  export_textured_height_mesh.py  launch_fullres_pressure_sweep_10us.py  plot_knudsen_accessibility_collision.py  plot_wall_hit_side_projection.py  plot_wall_hit_side_projection_sweep.py  run_fullres_pressure_sweep_10us.py  run_transport_case.py  sem_to_domain.py  summarize_transport_metrics.py  visualize_transport.py  visualize_transport_3d.py  write_pressure_sweep_vtks.py  write_wall_hit_per_particle_vtks.py
transport_cpp/: height_isosurface.cpp  mesh_particle_hits.cpp  particle_hits.cpp  transport_dda.cpp
