[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fetm-nano-domain"
version = "0.1.0"
description = "SEM to nano physical domain preprocessing around Depth-Anything-3"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23,<2",
  "pillow>=9.0",
  "scipy>=1.10",
]

[project.scripts]
sem-to-domain = "nano_sem_domain.cli:main"
gas-particle-hits = "nano_transport.run_particle_hits:main"
gas-mesh-particle-hits = "nano_transport.run_mesh_particle_hits:main"

[tool.setuptools.packages.find]
include = ["nano_sem_domain*", "nano_transport*"]
